fix: broken link

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,7 +1,7 @@
 ntaoussi:
   name: Nassim Taoussi
   title: PHP Developer
-  url: nassim-taoussi.fr
+  url: https://flowcv.me/nassim-taoussi
   image_url: https://gitlab.com/uploads/-/system/user/avatar/9629379/avatar.png?width=800
   email: nassim-taoussi@hotmail.com
   socials:
